# smesh

./: README.md
boards/: smokeSensorConnector7.kicad_pcb  smokeSensorConnector7.kicad_pro  smokeSensorConnector7.kicad_sch
mechanical/: antennaholder.stl  updatedantennaholder_0.4n_0.15mm_ABS_MK3.9_14m.bgcode
snode/: 411c_device_metrics.csv  411c_ina260.csv  44fc_config_v1.yaml  44fc_pmsa003i.csv  README.md  fbec_device_metrics_08_31_24_JasperRidge.csv  fbec_ina260.csv  fbec_other_08_31_24_JasperRidge.csv  pyproject.toml
snode/config/: build_standard_v1.0_config.yaml  demo_0098_build_config.yaml  demo_0098_build_config_utf8.yaml  factory_default_config_c2b0_smesh1.yaml
snode/data/: .~lock.fbec_device_metrics_08_31_24_JasperRidge.csv#  0098_bme688.csv  0098_device_metrics.csv  0098_ina260.csv  0098_logs.txt  00fc_bme688.csv  00fc_logs.txt  0b38_bme688.csv  0b38_ina260.csv  0b38_logs.txt  4004_bme688.csv  4004_device_metrics.csv  4004_logs.txt  4004_other.csv  4004_pmsa003i.csv  411c_pmsa003i.csv  44fc_bme688.csv  44fc_device_metrics.csv  44fc_ina260.csv  44fc_logs.txt  44fc_pmsa003i.csv  62e4_bme688.csv  62e4_device_metrics.csv  62e4_ina260.csv  62e4_logs.txt  62e4_pmsa003i.csv  ad0c_bme688.csv  ad0c_device_metrics.csv  ad0c_ina260.csv  ad0c_logs.txt  afcc_bme688.csv  afcc_logs.txt  c2b0_bme688.csv  c2b0_device_metrics.csv  c2b0_ina260.csv  c2b0_logs.txt  ca0c_bme688.csv  ca0c_device_metrics.csv  ca0c_logs.txt  cb14_bme688.csv  (+10 more)
snode/scripts/: read_aqi.py  run_autoconfig.py  set_parameters.py  traceroute_test.sh
