[tool.poetry]
name = "snode"
version = "0.1.0"
description = ""
authors = ["Joshua Dong <kindled@stanford.edu>", "Lisa Fung <lisafung@stanford.edu>", "Daniel Neamati <dneamati@stanford.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
meshtastic = "^2.3.14"
pytap2 = "^2.3.0"
pandas = "^2.2.2"
matplotlib = "^3.9.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
